@@ -1,5 +1,11 @@
 2021-02-17  Timm Bäder  <tbaeder@redhat.com>
 
+	* unstrip.c (handle_implicit_modules): Inline the next function
+	in three places. This is simply dwfl_getmodules with match_module
+	callback providing mmi.
+
+2021-02-17  Timm Bäder  <tbaeder@redhat.com>
+
 	* unstrip.c (handle_explicit_files): Move warn function...
 	(warn): ...here as top-level static function taking stripped,
 	unstripped files and force flag as extra arguments.
